fix moving upstreams
